# wordles-with-friends-client-web

./: .dockerignore  .env.example  .env.local.example  .env.production  .gitignore  .prettierignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  rsbuild.config.ts  rstest.config.ts  score-history-feature.md  tsconfig.json
.github/workflows/: deploy-storybook.yml  deploy.yml
.husky/: post-checkout  pre-commit
.storybook/: main.ts  preview.ts
docs/: QA-REPORT.md
infra/: cdk.json  package-lock.json  package.json
infra/lib/: github-actions-role-stack.ts  infra-stack.ts  issue-report-proxy-stack.ts
infra/test/: infra.test.ts
issue-proxy/: Cargo.toml  Dockerfile
issue-proxy/src/: main.rs
issue-proxy/templates/: bug.md  feature.md  footer.md  question.md
observability/: Dockerfile  docker-compose.yml  nginx.conf  otel-collector-config.yaml  tempo-config.yaml
scripts/: validate-env.js
src/: App.scss  App.tsx  AuthProvider.tsx  env.d.ts  global.scss  gradedGame.json  index.tsx  router.tsx  tokens.module.scss  tokens.module.scss.d.ts
src/api/: client.ts  errors.ts  guess.ts  history.ts  index.ts  issues.ts  profile.ts  puzzle.ts  scorekeeper.ts  session.ts  types.ts
src/components/: AppHeader.scss  AppHeader.stories.tsx  AppHeader.tsx  AvatarMenu.scss  AvatarMenu.stories.tsx  AvatarMenu.tsx  Button.scss  Button.stories.tsx  Button.tsx  DesignTokens.scss  DesignTokens.stories.tsx  ErrorBoundary.scss  ErrorBoundary.tsx  Footer.scss  (+45 more)
tests/: index.test.tsx  rstest.setup.ts
(+82 files in other folders)
